@@ -1,5 +1,16 @@
 2004-09-12  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/javax/swing/DefaultListSelectionModel.java:
+        Resynced with GNU Classpath.
+
+	2004-08-31  Michael Koch  <konqueror@gmx.de>
+
+        * javax/swing/DefaultListSelectionModel.java
+        (fireValueChanged): Renamed from fireSelectionValueChanged,
+        made protected.
+
+2004-09-12  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/io/VMFile.java:
 	Resynced with GNU Classpath.
 
